--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -289,7 +289,6 @@
   month = feb,
   year = {2016},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Learning,Mathematics - Statistics Theory,Statistics - Machine Learning},
-  annote = {Comment: 15 pages, 2 figures},
   file = {Ramdas et al_2016_Classification Accuracy as a Proxy for Two Sample Testing.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/MD57BQS4/Ramdas et al_2016_Classification Accuracy as a Proxy for Two Sample Testing.pdf:application/pdf;arXiv.org Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/ANXGBH2J/1602.html:text/html}
 }
 
@@ -323,31 +322,6 @@
   year = {2012},
   keywords = {Beta series estimation,classification analysis,Functional Magnetic Resonance Imaging,MVPA,Rapid event-related design},
   pages = {2636--2643},
-  annote = {The subject of this paper:
-~
-- Seen as a prediction problem, the challenge is to correctly associate a stimulous, with its corresponding spatial pattern.
-~
-~
-\_\_Questions of interest:\_\_
-~
-- How is accurate classification problem related to the signal detection problem?
-~
-- Is the optimal filter for detection, the same as the optimal filter for classification? (probably not).
-~
-- Will using the wrong HRF cause dependence between estimates?
-~
-~- Why are the one-against-all regressors not correlated? Because one-against all esentially measures the marginal~correlation, and not the
-conditional correlation measured by the multivariate regression.~~
-~
-~
-\_\_ Possible problem with this paper:\_\_
-~
-- How is the chance level set?
-~
-- Support vector regression (SVR) does not regularize. It merely uses differet target functions (quantile regression).
-~
-- The success of one-against-all depends the particular design, because the betas abosorb all other correlated effects. The true winner thus thus be the mass-univariate regression.
-},
   file = {Mumford et al_2012_Deconvolving BOLD activation in event-related designs for multivoxel pattern.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/6F6XSHTW/Mumford et al_2012_Deconvolving BOLD activation in event-related designs for multivoxel pattern.pdf:application/pdf;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/2W45BQQJ/S1053811911010081.html:text/html}
 }
 
@@ -365,8 +339,6 @@ conditional correlation measured by the multivariate regression.~~
   year = {2014},
   keywords = {False positive rate,fMRI,MVPA,pattern classification,Pattern similarity},
   pages = {130--138},
-  annote = {A study of the (parametric) random-effect covariance of beta estimates, for the purposes of experimental design.
-This means that design is optimized for parametric RFX inference. Not for non-parametric FFX as in Stelzer, or others.},
   file = {Mumford et al_2014_The impact of study design on pattern estimation for single-trial multivariate.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/ZXGTRKTZ/Mumford et al_2014_The impact of study design on pattern estimation for single-trial multivariate.pdf:application/pdf;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/IXZRT8C4/S105381191400768X.html:text/html}
 }
 
@@ -561,7 +533,6 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
   month = nov,
   year = {2014},
   keywords = {62G09,Mathematics - Statistics Theory},
-  annote = {Comment: This version of the article is more focused and reader-friendly},
   file = {Hemerik_Goeman_2014_Exact testing with random permutations.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/6NB6FSI9/Hemerik_Goeman_2014_Exact testing with random permutations.pdf:application/pdf;Hemerik_Goeman_2014_Exact testing with random permutations.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DK287DKI/Hemerik_Goeman_2014_Exact testing with random permutations.pdf:application/pdf;arXiv.org Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/494EESV4/1411.html:text/html;arXiv.org Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/GKQ23FZS/1411.html:text/html}
 }
 
@@ -856,6 +827,46 @@ Results: A model-based approach is used to compare the ranking performances of r
   keywords = {anomaly prediction,computational complexity,Convergence,Costs,Diseases,false negative probability,false positive probability,frequency,Intrusion detection,Neyman-Pearson classification,Neyman–Pearson (NP) classification,NP classification paradigm,Particle measurements,pattern classification,performance measures,probability,Statistical analysis,statistical learning,statistical learning theory,Testing,Training data},
   pages = {2852--2863},
   file = {Scott_2007_Performance Measures for Neyman #x2013\;Pearson Classification.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/AWD7V9BK/Scott_2007_Performance Measures for Neyman #x2013\;Pearson Classification.pdf:application/pdf;IEEE Xplore Abstract Record:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/WRXQ7J63/abs_all.html:text/html}
+}
+
+@incollection{golland_permutation_2005,
+  series = {Lecture Notes in Computer Science},
+  title = {Permutation {{Tests}} for {{Classification}}},
+  copyright = {\textcopyright{}2005 Springer-Verlag Berlin Heidelberg},
+  isbn = {978-3-540-26556-6 978-3-540-31892-7},
+  abstract = {We describe a permutation procedure used extensively in classification problems in computational biology and medical imaging. We empirically study the procedure on simulated data and real examples from neuroimaging studies and DNA microarray analysis. A theoretical analysis is also suggested to assess the asymptotic behavior of the test. An interesting observation is that concentration of the permutation procedure is controlled by a Rademacher average which also controls the concentration of empirical errors to expected errors.},
+  language = {en},
+  timestamp = {2016-08-06T06:58:33Z},
+  number = {3559},
+  urldate = {2016-08-06},
+  booktitle = {Learning {{Theory}}},
+  publisher = {{Springer Berlin Heidelberg}},
+  author = {Golland, Polina and Liang, Feng and Mukherjee, Sayan and Panchenko, Dmitry},
+  editor = {Auer, Peter and Meir, Ron},
+  month = jun,
+  year = {2005},
+  keywords = {Algorithm Analysis and Problem Complexity,Artificial Intelligence (incl. Robotics),Computation by Abstract Devices,Mathematical Logic and Formal Languages},
+  pages = {501--515},
+  file = {Golland et al_2005_Permutation Tests for Classification.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DEC9CKG7/Golland et al_2005_Permutation Tests for Classification.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/PUJT9AG2/10.html:text/html},
+  doi = {10.1007/11503415_34}
+}
+
+@misc{harrell_cross_validated,
+  title = {classification - {{How}} to assess statistical significance of the accuracy of a classifier? - {{Cross Validated}}},
+  shorttitle = {classification - {{How}} to assess statistical significance of the accuracy of a classifier?},
+  timestamp = {2016-08-06T07:27:18Z},
+  urldate = {2016-08-06},
+  howpublished = {\url{http://stats.stackexchange.com/questions/17408/how-to-assess-statistical-significance-of-the-accuracy-of-a-classifier}},
+  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/IQ3WEKQK/how-to-assess-statistical-significance-of-the-accuracy-of-a-classifier.html:text/html}
+}
+
+@misc{_significance_????,
+  title = {Significance testing of cross-validated classification accuracy: shuffling vs. binomial test - {{Cross Validated}}},
+  shorttitle = {Significance testing of cross-validated classification accuracy},
+  timestamp = {2016-08-06T07:18:33Z},
+  urldate = {2016-08-06},
+  howpublished = {\url{http://stats.stackexchange.com/questions/88809/significance-testing-of-cross-validated-classification-accuracy-shuffling-vs-b}},
+  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/J4SDCS7U/significance-testing-of-cross-validated-classification-accuracy-shuffling-vs-b.html:text/html}
 }
 
 
