--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -490,8 +490,7 @@ of prediction in theoretical and applied communities and the relative lack of aw
 popularity of the topic of Neyman-Pearson style hypothesis testing in the computer science
 and related ``data science'' communities.
 \end{quote}
-
-Or, as simply put by Frank Harrell in the \textsf{CrossValidated} Q\&A site\footnote{\url{http://stats.stackexchange.com/questions/17408/how-to-assess-statistical-significance-of-the-accuracy-of-a-classifier}.}:
+And more simply by Frank Harrell in the \textsf{CrossValidated} Q\&A site\footnote{\url{http://stats.stackexchange.com/questions/17408/how-to-assess-statistical-significance-of-the-accuracy-of-a-classifier}.}:
 \begin{quote}
  ... your use of proportion classified correctly as your accuracy score. This is a discontinuous improper scoring rule that can be easily manipulated because it is arbitrary and insensitive.
 \end{quote}
