--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -836,7 +836,7 @@ Results: A model-based approach is used to compare the ranking performances of r
   isbn = {978-3-540-26556-6 978-3-540-31892-7},
   abstract = {We describe a permutation procedure used extensively in classification problems in computational biology and medical imaging. We empirically study the procedure on simulated data and real examples from neuroimaging studies and DNA microarray analysis. A theoretical analysis is also suggested to assess the asymptotic behavior of the test. An interesting observation is that concentration of the permutation procedure is controlled by a Rademacher average which also controls the concentration of empirical errors to expected errors.},
   language = {en},
-  timestamp = {2016-08-06T06:58:33Z},
+  timestamp = {2016-08-06T07:40:43Z},
   number = {3559},
   urldate = {2016-08-06},
   booktitle = {Learning {{Theory}}},
@@ -867,6 +867,79 @@ Results: A model-based approach is used to compare the ranking performances of r
   urldate = {2016-08-06},
   howpublished = {\url{http://stats.stackexchange.com/questions/88809/significance-testing-of-cross-validated-classification-accuracy-shuffling-vs-b}},
   file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/J4SDCS7U/significance-testing-of-cross-validated-classification-accuracy-shuffling-vs-b.html:text/html}
+}
+
+@inproceedings{slonim_class_2000,
+  address = {New York, NY, USA},
+  series = {RECOMB '00},
+  title = {Class {{Prediction}} and {{Discovery Using Gene Expression Data}}},
+  isbn = {978-1-58113-186-4},
+  doi = {10.1145/332306.332564},
+  abstract = {Classification of patient samples is a crucial aspect of cancer diagnosis and treatment. We present a method for classifying samples by computational analysis of gene expression data. We consider the classification problem in two parts: class discovery and class prediction. Class discovery refers to the process of dividing samples into reproducible classes that have similar behavior or properties, while class prediction places new samples into already known classes. We describe a method for performing class prediction and illustrate its strength by correctly classifying bone marrow and blood samples from acute leukemia patients. We also describe how to use our predictor to validate newly discovered classes, and we demonstrate how this technique could have discovered the key distinctions among leukemias if they were not already known. This proof-of-concept experiment paves the way for a wealth of future work on the molecular classification and understanding of disease.},
+  timestamp = {2016-08-06T07:38:39Z},
+  urldate = {2016-08-06},
+  booktitle = {Proceedings of the {{Fourth Annual International Conference}} on {{Computational Molecular Biology}}},
+  publisher = {{ACM}},
+  author = {Slonim, Donna K. and Tamayo, Pablo and Mesirov, Jill P. and Golub, Todd R. and Lander, Eric S.},
+  year = {2000},
+  pages = {263--272},
+  file = {Slonim et al_2000_Class Prediction and Discovery Using Gene Expression Data.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/BP69R72G/Slonim et al_2000_Class Prediction and Discovery Using Gene Expression Data.pdf:application/pdf}
+}
+
+@article{mukherjee_estimating_2003,
+  title = {Estimating dataset size requirements for classifying {{DNA}} microarray data},
+  volume = {10},
+  issn = {1066-5277},
+  doi = {10.1089/106652703321825928},
+  abstract = {A statistical methodology for estimating dataset size requirements for classifying microarray data using learning curves is introduced. The goal is to use existing classification results to estimate dataset size requirements for future classification experiments and to evaluate the gain in accuracy and significance of classifiers built with additional data. The method is based on fitting inverse power-law models to construct empirical learning curves. It also includes a permutation test procedure to assess the statistical significance of classification performance for a given dataset size. This procedure is applied to several molecular classification problems representing a broad spectrum of levels of complexity.},
+  language = {eng},
+  timestamp = {2016-08-06T07:39:06Z},
+  number = {2},
+  journal = {Journal of Computational Biology: A Journal of Computational Molecular Cell Biology},
+  author = {Mukherjee, Sayan and Tamayo, Pablo and Rogers, Simon and Rifkin, Ryan and Engle, Anna and Campbell, Colin and Golub, Todd R. and Mesirov, Jill P.},
+  year = {2003},
+  keywords = {Algorithms,Computational Biology,Computer Simulation,Gene Expression Profiling,Humans,Models; Molecular,Neoplasms,Oligonucleotide Array Sequence Analysis},
+  pages = {119--142},
+  pmid = {12804087}
+}
+
+@article{juan_prediction_2004,
+  title = {Prediction of tumor outcome based on gene expression data},
+  volume = {9},
+  issn = {1007-1202, 1993-4998},
+  doi = {10.1007/BF02830598},
+  abstract = {Gene expression microarray data can be used to classify tumor types. We proposed a new procedure to classify human tumor samples based on microarray gene expressions by using a hybrid supervised learning method called MOEA+WV (Multi-Objective Evolutionary Algorithm+Weighted Voting). MOEA is used to search for a relatively few subsets of informative genes from the high-dimensional gene space, and WV is used as a classification tool. This new method has been applied to predicate the subtypes of lymphoma and outcomes of medulloblastoma. The results are relatively accurate and meaningful compared to those from other methods.},
+  language = {en},
+  timestamp = {2016-08-06T07:39:29Z},
+  number = {2},
+  urldate = {2016-08-06},
+  journal = {Wuhan University Journal of Natural Sciences},
+  author = {Juan, Liu and Iba, Hitoshi},
+  month = mar,
+  year = {2004},
+  keywords = {Bioinformatics,Computer Science; general,Life Sciences; general,Mathematics; general,MOEA,Pareto optimization,Physics; general,Q 786,TP 181,tumor classification},
+  pages = {177--182},
+  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/KNGZDD4K/BF02830598.html:text/html}
+}
+
+@article{golub_molecular_1999,
+  title = {Molecular {{Classification}} of {{Cancer}}: {{Class Discovery}} and {{Class Prediction}} by {{Gene Expression Monitoring}}},
+  volume = {286},
+  issn = {0036-8075, 1095-9203},
+  shorttitle = {Molecular {{Classification}} of {{Cancer}}},
+  doi = {10.1126/science.286.5439.531},
+  abstract = {Although cancer classification has improved over the past 30 years, there has been no general approach for identifying new cancer classes (class discovery) or for assigning tumors to known classes (class prediction). Here, a generic approach to cancer classification based on gene expression monitoring by DNA microarrays is described and applied to human acute leukemias as a test case. A class discovery procedure automatically discovered the distinction between acute myeloid leukemia (AML) and acute lymphoblastic leukemia (ALL) without previous knowledge of these classes. An automatically derived class predictor was able to determine the class of new leukemia cases. The results demonstrate the feasibility of cancer classification based solely on gene expression monitoring and suggest a general strategy for discovering and predicting cancer classes for other types of cancer, independent of previous biological knowledge.},
+  language = {en},
+  timestamp = {2016-08-06T07:40:04Z},
+  number = {5439},
+  urldate = {2016-08-06},
+  journal = {Science},
+  author = {Golub, T. R. and Slonim, D. K. and Tamayo, P. and Huard, C. and Gaasenbeek, M. and Mesirov, J. P. and Coller, H. and Loh, M. L. and Downing, J. R. and Caligiuri, M. A. and Bloomfield, C. D. and Lander, E. S.},
+  month = oct,
+  year = {1999},
+  pages = {531--537},
+  file = {Golub et al_1999_Molecular Classification of Cancer.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/SGGJM52S/Golub et al_1999_Molecular Classification of Cancer.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/EWUEE8IZ/531.html:text/html},
+  pmid = {10521349}
 }
 
 
