--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -942,4 +942,21 @@ Results: A model-based approach is used to compare the ranking performances of r
   pmid = {10521349}
 }
 
+@article{heller_consistent_2012,
+  title = {A consistent multivariate test of association based on ranks of distances},
+  issn = {0006-3444, 1464-3510},
+  doi = {10.1093/biomet/ass070},
+  abstract = {We consider the problem of detecting associations between random vectors of any dimension. Few tests of independence exist that are consistent against all dependent alternatives. We propose a powerful test that is applicable in all dimensions and consistent against all alternatives. The test has a simple form, is easy to implement, and has good power.},
+  language = {en},
+  timestamp = {2016-08-06T08:18:08Z},
+  urldate = {2016-08-06},
+  journal = {Biometrika},
+  author = {Heller, Ruth and Heller, Yair and Gorfine, Malka},
+  month = dec,
+  year = {2012},
+  keywords = {High-dimensional response,Independence test,Multivariate data,Random vector},
+  pages = {ass070},
+  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/2SAUKDXJ/biomet.html:text/html}
+}
+
 
