--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -448,7 +448,7 @@ We did not include this test in the battery we compared, but we note the followi
 
 \subsection{Non-linear predictors}
 It may be argued that accuracy tests permits the separation between classes in high dimensions, such as in \emph{reproducing kernel Hilbert spaces} (RKHS) by using non-linear predictors.
-This is immaterial since group tests can also be performed in higher dimensions (see \cite{gretton_kernel_2012-1}).
+This is immaterial since group tests can also be performed in higher dimensions (e.g. \cite{gretton_kernel_2012-1}, or \cite{heller_consistent_2012}).
 
 
 \subsection{Ease of implementation}
@@ -517,7 +517,7 @@ And more simply by Frank Harrell in the \textsf{CrossValidated} Q\&A site\footno
 
 
 
-
+\newpage
 \bibliographystyle{abbrvnat}
 \bibliography{Permuting_Accuracy.bib}
 
