--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -46,6 +46,7 @@
 \newcommand{\expect}[1]{\mathbf{E}\left[ #1 \right]} % The expectation operator
 \newcommand{\acc}{T^{acc}} 
 \newcommand{\dominant}{\hat{p}_{max}}
+\newcommand{\minority}{\hat{p}_{min}}
 \newcommand{\prob}[1]{Prob( #1 )} % the probability of an event
 \newcommand{\rv}[1]{\mathbf{#1}} % A random variable
 \newcommand{\x}{\rv x} % The random variable x 
@@ -182,10 +183,10 @@ Given a predictor $\hypEstim$, a natural test statistic is some estimate of its 
 Complicating matters: very low accuracies, even $0$, is evidence that the classes are separated, and we only need to invert the predictions. 
 We can thus consider $|\acc_{\hypEstim}-0.5|$ as the test statistic.
 This, however, implies that if the classes are identical, random guessing has $0.5$ accuracy. This is not true if the classes are not balanced. 
-The chance level in which case is the prevalence of the dominant class, we denote by $\dominant$.
-This suggests the following test statistic $|\acc_{\hypEstim}-\dominant|$.
+The chance level in which case is the minority class, we denote by $\minority$.
+This suggests the following test statistic $|\acc_{\hypEstim}-\minority|$.
 Since we will be aggregating these statistics over random data sets where the dominant class may have varying frequencies, it seems appropriate to standardize the scale of this statistic. 
-We thus also consider the z-scored accuracy: $|\acc_{\hypEstim}-\dominant|/\sqrt{\dominant(1-\dominant)}$.
+We thus also consider the z-scored accuracy: $|\acc_{\hypEstim}-\minority|/\sqrt{\minority(1-\minority)}$.
 
 
 \paragraph{Cross validate or not?}
