--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -461,6 +461,9 @@ Since they permute features, and not labels, then all their permutation samples 
 %TODO: why number of folds matters?
 %TODO: verify sensitivity to balance. 
 
+%TODO: discuss \cite{ojala_permutation_2010}
+
+
 \subsection{Non-linear predictors}
 It may be argued that accuracy tests permits the separation between classes in high dimensions, such as in \emph{reproducing kernel Hilbert spaces} (RKHS) by using non-linear predictors.
 This is immaterial since group tests can also be performed in higher dimensions (e.g. \cite{gretton_kernel_2012-1}, or \cite{heller_consistent_2012}).
